// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime - dateStringSchema validaton test should be INVALID 1`] = `
Object {
  "error": [ValidationError: "value" must be a string],
  "value": 12,
}
`;

exports[`DateTime - dateStringSchema validaton test should be INVALID 2`] = `
Object {
  "error": [ValidationError: "value" with value "STRING" fails to match the YYYY-MM-DD format pattern],
  "value": "STRING",
}
`;

exports[`DateTime - dateStringSchema validaton test should be INVALID 3`] = `
Object {
  "error": [ValidationError: "value" with value "0000-00-00" fails to match the YYYY-MM-DD format pattern],
  "value": "0000-00-00",
}
`;

exports[`DateTime - dateStringSchema validaton test should be INVALID 4`] = `
Object {
  "error": [ValidationError: "value" with value "1234-13-01" fails to match the YYYY-MM-DD format pattern],
  "value": "1234-13-01",
}
`;

exports[`DateTime - dateStringSchema validaton test should be INVALID 5`] = `
Object {
  "error": [ValidationError: "value" with value "1234-12-32" fails to match the YYYY-MM-DD format pattern],
  "value": "1234-12-32",
}
`;

exports[`DateTime - dateStringSchema validaton test should be VALID 1`] = `
Object {
  "value": "2010-12-01",
}
`;

exports[`DateTime - timeStringSchema validaton test should be INVALID 1`] = `
Object {
  "error": [ValidationError: "value" must be a string],
  "value": 12,
}
`;

exports[`DateTime - timeStringSchema validaton test should be INVALID 2`] = `
Object {
  "error": [ValidationError: "value" with value "STRING" fails to match the HH:MM format pattern],
  "value": "STRING",
}
`;

exports[`DateTime - timeStringSchema validaton test should be INVALID 3`] = `
Object {
  "error": [ValidationError: "value" with value "24:01" fails to match the HH:MM format pattern],
  "value": "24:01",
}
`;

exports[`DateTime - timeStringSchema validaton test should be INVALID 4`] = `
Object {
  "error": [ValidationError: "value" with value "23:61" fails to match the HH:MM format pattern],
  "value": "23:61",
}
`;

exports[`DateTime - timeStringSchema validaton test should be VALID 1`] = `
Object {
  "value": "00:00",
}
`;

exports[`DateTime - timeStringSchema validaton test should be VALID 2`] = `
Object {
  "value": "01:01",
}
`;

exports[`DateTime - timeStringSchema validaton test should be VALID 3`] = `
Object {
  "value": "23:59",
}
`;
